# unified-runtime

./: CMakeLists.txt
scripts/: spec2tablegen.py
source/adapters/: CMakeLists.txt
source/adapters/level_zero/: CMakeLists.txt  device.cpp  ur_interface_loader.cpp
source/adapters/offload/: CMakeLists.txt  adapter.cpp  device.cpp  enqueue.cpp  event.cpp  kernel.cpp  kernel.hpp  platform.cpp  program.cpp  queue.cpp  ur2offload.hpp  ur_interface_loader.cpp  usm.cpp
